plotting/lineplot.
Python 3.8.5 (default, Sep  4 2020, 07:30:14) 
[GCC 7.3.0] :: Anaconda, Inc. on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> python.el: native completion setup loaded
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 7
    self.xlims = (,)
                  ^
SyntaxError: invalid syntax
>>> 
>>> 
>>> x = LinePlot()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: __init__() missing 1 required positional argument: 'ax'
>>> x = LinePlot(ax)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ax' is not defined
>>> line
<__main__.LinePlot object at 0x7f41e56d0fa0>
>>> line.load_config()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 22, in load_config
    self.cfg = configparser.ConfigParser()
NameError: name 'configparser' is not defined
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 68, in <module>
    line.load_config()
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 24, in load_config
    self.cfg = configparser.ConfigParser()
NameError: name 'self' is not defined
>>> load default configuration file.
>>> cfg = line.cfg
>>> cfg['GSMF']
<Section: GSMF>
>>> cfg = cfg['GSMF']
>>> cfg.xmin
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'SectionProxy' object has no attribute 'xmin'
>>> cfg['xmin']
'8.57'
>>> cfg.get('x')
>>> cfg.get('xticks')
'9.0,10.0,11.0,12.0,13.0'
>>> cfg.get('xticks').split(sep=',')
['9.0', '10.0', '11.0', '12.0', '13.0']
>>> x = cfg.get('xticks').split(sep=',')
>>> x
['9.0', '10.0', '11.0', '12.0', '13.0']
>>> [float(x) for x in x]
[9.0, 10.0, 11.0, 12.0, 13.0]
>>> 
>>> load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 80, in <module>
    line.load_config()
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 38, in load_config
    self.xticks = [float(x) for x in cfg.get('xticks').split(sep=',')]
TypeError: get() missing 1 required positional argument: 'option'
>>> load default configuration file.
>>> line
<__main__.LinePlot object at 0x7f41e56da790>
>>> line.xticks
[9.0, 10.0, 11.0, 12.0, 13.0]
>>> line.yticks
[-5.0, -4.0, -3.0, -2.0, -1.0]
>>> line.legend_data
'upper left'
>>> cfg
<Section: GSMF>
>>> cfg.read(path_config)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'SectionProxy' object has no attribute 'read'
>>> load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 81, in <module>
    line.load_config()
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 27, in load_config
    pars = cfg[plottype]
  File "/home/shuiyao/miniconda3/lib/python3.8/configparser.py", line 1254, in __getitem__
    raise KeyError(key)
KeyError: 'GSMF'
>>> load default configuration file.
>>> cfg = line.cfg
>>> cfg
<configparser.ConfigParser object at 0x7f41e5554d90>
>>> cfg.keys()
KeysView(<configparser.ConfigParser object at 0x7f41e5554d90>)
>>> set(cfg.keys())
{'SMHM', 'GSMF', 'DEFAULT', 'MZR'}
>>> list(cfg.keys())
['DEFAULT', 'GSMF', 'SMHM', 'MZR']
>>> list(cfg.keys()).remove('DEFAULT')
>>> list(cfg.keys()).remove('DEFAULT')
>>> 'GSMF' in cfg.keys()
True
>>> load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 83, in <module>
    line.load_config()
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 30, in load_config
    pars = self.cfg[plottype]
AttributeError: 'LinePlot' object has no attribute 'cfg'
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 28, in load_config
    assert(plottype in cfg.keys()), "plottype ({}) not in {}".format(plottype, list(cfg.keys()))
AssertionError: plottype (x) not in ['DEFAULT', 'GSMF', 'SMHM', 'MZR']
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 33, in load_config
    self.xlims = (float(pars.get('xmin')), float(pars.get('xmax')))
UnboundLocalError: local variable 'pars' referenced before assignment
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
plottype (x) not in ['DEFAULT', 'GSMF', 'SMHM', 'MZR']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 34, in load_config
    self.xlims = (float(pars.get('xmin')), float(pars.get('xmax')))
UnboundLocalError: local variable 'pars' referenced before assignment
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
plottype (x) not in ['DEFAULT', 'GSMF', 'SMHM', 'MZR']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 30, in load_config
    pars = cfg[plottype]
  File "/home/shuiyao/miniconda3/lib/python3.8/configparser.py", line 960, in __getitem__
    raise KeyError(key)
KeyError: 'x'
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 30
    raise KeyError, "plottype ({}) not in {}".format(plottype, list(cfg.keys()))
                  ^
SyntaxError: invalid syntax
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 28, in load_config
    pars = cfg[plottype]
  File "/home/shuiyao/miniconda3/lib/python3.8/configparser.py", line 960, in __getitem__
    raise KeyError(key)
KeyError: 'x'
>>> load default configuration file.
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 84, in <module>
    line.load_config()
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 28, in load_config
    pars = cfg.get(plottype)
TypeError: get() missing 1 required positional argument: 'option'
>>> cfg.get()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: get() missing 2 required positional arguments: 'section' and 'option'
>>> cfg.get('x')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: get() missing 1 required positional argument: 'option'
>>> load default configuration file.
>>> line.load_config('x')
load default configuration file.
Traceback (most recent call last):
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 29, in load_config
    pars = cfg[plottype]
  File "/home/shuiyao/miniconda3/lib/python3.8/configparser.py", line 960, in __getitem__
    raise KeyError(key)
KeyError: 'x'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/shuiyao/codes/PyGIZMO/plotting/lineplot.py", line 31, in load_config
    raise KeyError("plottype ({}) not in {}".format(plottype, list(cfg.keys())))
KeyError: "plottype (x) not in ['DEFAULT', 'GSMF', 'SMHM', 'MZR']"
>>> 